fixed issue with search bar not resizing and cutting off

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ footer p {
   form {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
   }
